Added jwks_uri in .well-known/openid-configuration
Closes #27
