# docs/swagger.json
@@ -19,6 +19,18 @@
                 "responses": {}
             }
         },
+        "/.well-known/openid-configuration/jwks": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "OpenID"
+                ],
+                "summary": "JSON web key set endpoint",
+                "responses": {}
+            }
+        },
         "/.well-known/webfinger": {
             "get": {
                 "produces": [
