# server/route.go
@@ -1,15 +1,17 @@
 package server
 
 import (
+	"crypto/ecdsa"
+
 	"github.com/alexhokl/auth-server/api"
+	"github.com/alexhokl/auth-server/docs"
 	"github.com/gin-gonic/gin"
 	"github.com/go-oauth2/oauth2/v4/server"
-	"github.com/alexhokl/auth-server/docs"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func GetRouter(srv *server.Server) *gin.Engine {
+func GetRouter(oauthService *server.Server, privateKey *ecdsa.PrivateKey) *gin.Engine {
 	r := gin.New()
 	r.Use(gin.Logger())
 	r.Use(gin.Recovery())
@@ -19,11 +21,12 @@ func GetRouter(srv *server.Server) *gin.Engine {
 
 	r.POST("/signin", api.SignIn)
 	r.POST("/signup", api.SignUp)
-	r.POST("/token", gin.WrapF(api.GetTokenRequestHandler(srv)))
+	r.POST("/token", gin.WrapF(api.GetTokenRequestHandler(oauthService)))
 
 	r.POST("/signout", api.RequiredAuthenticated(), api.SignOut)
-	r.GET("/authorize", api.RequiredAuthenticated(), gin.WrapF(api.GetAuthorizationRequestHandler(srv)))
+	r.GET("/authorize", api.RequiredAuthenticated(), gin.WrapF(api.GetAuthorizationRequestHandler(oauthService)))
 	r.GET("/.well-known/openid-configuration", api.GetOpenIDConfiguration)
+	r.GET("/.well-known/openid-configuration/jwks", api.GetJSONWebKeySetHandler(privateKey))
 	r.GET("/.well-known/webfinger", api.GetWebFingerConfiguration)
 
 	clients := r.Group("/clients")
